--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/rgajul/workspace/Karate-DSL-POC/junit5-4.2.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
