--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<maven.compiler.version>3.8.1</maven.compiler.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
 		<karate.version>1.0.1</karate.version>
+		<gatling.plugin.version>3.1.2</gatling.plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -19,6 +20,13 @@
 			<version>${karate.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>9.2.1.jre11</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.junit.vintage</groupId>
 			<artifactId>junit-vintage-engine</artifactId>
@@ -29,6 +37,12 @@
 			<groupId>net.masterthought</groupId>
 			<artifactId>cucumber-reporting</artifactId>
 			<version>5.3.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.intuit.karate</groupId>
+			<artifactId>karate-gatling</artifactId>
+			<version>${karate.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
@@ -79,6 +93,15 @@
 					<systemProperties>
 						<karate.options>--tags ~@ignore</karate.options>
 					</systemProperties>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>io.gatling</groupId>
+				<artifactId>gatling-maven-plugin</artifactId>
+				<version>${gatling.plugin.version}</version>
+				<configuration>
+					<simulationsFolder>src/test/java/com/performance</simulationsFolder>
+					<configFolder>src/test/java/com/performance/data</configFolder>
 				</configuration>
 			</plugin>
 		</plugins>
