--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
 			<version>${karate.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<testResources>
