--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
-		<karate.version>1.0.1</karate.version>
+		<karate.version>1.2.1.RC2</karate.version>
 		<gatling.plugin.version>3.1.2</gatling.plugin.version>
 	</properties>
 	<dependencies>
