--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,8 @@ steps:
     goals: 'clean test "-Dkarate.options=--tags @CSVDemo'
 - task: CopyFiles@2
   inputs:
-    Contents: '**/*.overview-features.html'
+    SourceFolder: '$(agent.builddirectory)'
+    Contents: '**/target'
     TargetFolder: '$(build.artifactstagingdirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
