--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,9 +31,12 @@ steps:
     jdkVersionOption: '1.8'
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
+    sonarQubeRunAnalysis: true
+    sqMavenPluginVersionChoice: 'latest'
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'clean test "-Dkarate.options=--tags @CSVDemo'
 - task: SonarCloudAnalyze@1
+
 - task: CopyFiles@2
   inputs:
     SourceFolder: '$(agent.builddirectory)'
