--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.version>3.8.1</maven.compiler.version>
 		<maven.surefire.version>2.22.2</maven.surefire.version>
-		<karate.version>1.2.0.RC5</karate.version>
+		<karate.version>1.0.1</karate.version>
 		<gatling.plugin.version>3.1.2</gatling.plugin.version>
 	</properties>
 	<dependencies>
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>net.masterthought</groupId>
 			<artifactId>cucumber-reporting</artifactId>
-			<version>5.3.1</version>
+			<version>5.5.2</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
